fix horizontal scroll style

--- a/src/pages/exhibitors/components/exhibitor-abstract/exhibitor-abstract.scss
+++ b/src/pages/exhibitors/components/exhibitor-abstract/exhibitor-abstract.scss
@@ -122,17 +122,17 @@
       margin-top: 20px;
 
       .products {
-        display: flex;
-        max-height: 100px;
-        overflow: auto;
         width: 310px;
+        display: block;
+        white-space: nowrap;
+        overflow-x: scroll;
+        overflow-y: hidden;
         .product-item {
-          margin: 0 20px;
-          flex: 1;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
+          display: inline-block;
           width: 80px;
+          height: 80px;
+          margin-right: 10px;
+
           .product-name {
             margin-top: 10px;
             @include textOverflow(100%);
@@ -174,13 +174,24 @@
     .content {
       margin-top: 20px;
       max-height: 30px;
-      overflow: hidden;
 
-      img {
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-        margin: 0 2px;
+      .visitors {
+        width: 310px;
+        display: block;
+        white-space: nowrap;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        .visitor {
+          display: inline-block;
+          width: 30px;
+          height: 30px;
+          margin-right: 4px;
+          img {
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+          }
+        }
       }
     }
   }
